2006-10-24 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_xvmc.c: (ViaXvMCCreateContext):

	Remove VT3314 (CN700, VM800 etc.) mpeg2 AGP DMA support.

2006-10-11  Xavier Bachelot <xb_ml-at-kelkoo-dot-net>

	reviewed by: Ivor

	* unichrome/via_bios.h:
	* unichrome/via_id.c:
	* unichrome/via_mode.h:
	* unichrome/via_video.c: (DecideOverlaySupport):

	DDR533 memory support and small clean up.
	Fujitsu/Siemens Amilo L7320 pci id (reported by DeNayGo).

2006-10-03 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* unichrome/via_video.c: (viaPutImage):

	Removed some stray debug messages.
	

2006-10-02  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave), (VIARestore):

	Moved a line to after declarations for picky gcc-2.96,
	tweaked comments and debugging lines.

2006-09-27  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* unichrome/via_memory.c:

	Don't include drm headers in non-dri build.
	
2006-09-25  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/Makefile.am:

	Mention the overall revision number in the log, not just
	the driver code revision.

2006-09-24  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* libxvmc/viaXvMC.c: (XvMCSetAttribute):

	Fix a mutex unlocking issue (Luc Verhaegen).
	Have the lowlevel drivers check for the correct chipid.
	
2006-09-24  Michal Ludvig  <michal-at-logix-dot-cz>

	* man/Makefile.am:

	Fix man-page symlink for out-of-tree build (trac ticket #50).

2006-09-22  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_drmclient.h:

	include stdint.h instead of re-typedefining CARD32

2006-09-17  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave):

	Put in a few extra debugging lines.

2006-09-05  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_swov.c:
